

export class Number extends Operable {
  value: number;


}
