

export class StructuredValue extends Intangible {


}
