classDiagram
  DatedMoneySpecification -- dateTime,date
DatedMoneySpecification -- date,dateTime
DatedMoneySpecification -- number,MonetaryAmount


StructuredValue <|-- DatedMoneySpecification
class DatedMoneySpecification {

  dateTime,date startDate
  date,dateTime endDate
  string currency
  number,MonetaryAmount amount

}
